--- a/HomeWork1/myapp/src/App.css
+++ b/HomeWork1/myapp/src/App.css
@@ -14,18 +14,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #2358c2;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(204, 18, 18);
 }
 
 .App-link {
-  color: #61dafb;
+  color: #565b5c;
 }
 
 @keyframes App-logo-spin {
